now is ready for pipelines

--- a/dockerfile-jenkins-ssh/Dockerfile
+++ b/dockerfile-jenkins-ssh/Dockerfile
@@ -4,16 +4,21 @@ USER root
 
 ENV JAVA_OPTS="-Djenkins.install.runSetupWizard=false"
 ENV JENKINS_GROOVY_INIT_FOLDER="/usr/share/jenkins/ref/init.groovy.d"
+ENV CASC_JENKINS_CONFIG="/usr/share/jenkins/ref/jenkins.yml"
 
+# copy and run jenkins plugins
 COPY plugins.txt /usr/share/jenkins/ref/plugins.txt
 RUN xargs /usr/local/bin/install-plugins.sh < /usr/share/jenkins/ref/plugins.txt
 
 # create configs
 COPY configs/ $JENKINS_GROOVY_INIT_FOLDER
 
-#install ssh, maven
+# copy jcasc config
+COPY jenkins.yml $CASC_JENKINS_CONFIG
+
+#install apps
 RUN apt-get update; 
-RUN apt-get install -y passwd openssh-client openssh-server maven sudo systemd
+RUN apt-get install -y passwd openssh-client openssh-server maven sudo systemd vim
 
 # set juser as admin
 RUN useradd juser -s /bin/bash -g sudo -m
